@@ -1,3 +1,11 @@
+Mon May 28 23:38:29 2001  George Lebl <jirka@5z.com>
+
+	* Applying patch:
+
+Sun May 27 16:14:44 2001  Michal Palczewski <mpalczew@u.washington.edu>
+
+	* tasklist_icon.c: fix memory leak in 
+
 Mon May 28 02:50:50 2001  George Lebl <jirka@5z.com>
 
 	* xstuff.[ch], basep-widget.c, foobar-widget.c:  Set the USSize and
